tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_accept.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
y

🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m2[0m[33m commands:[0m

🔄 post-create:
[107m [0m  [1m[34mecho[0m [32m'First command'[0m[0m

🔄 post-create:
[107m [0m  [1m[34mecho[0m [32m'Third command'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[34mecho[0m [32m'First command'[0m[0m
[0mFirst command
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[34mecho[0m [32m'Second command'[0m[0m
[0mSecond command
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[34mecho[0m [32m'Third command'[0m[0m
[0mThird command
✅ [32mCreated new worktree for [1m[32mtest-mixed-accept[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO]/test-repo.test-mixed-accept[0m[0m
💡 [2m[2mTo enable automatic cd, run: wt config shell install[0m[0m
